--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 *{
     font-family: "Poppins", sans-serif;
+    /* border: 1px solid; */
 }
 
 :root{
@@ -15,4 +16,11 @@
 
 body{
     background-color: #f9f9f9;
+}
+.ring-1{
+    --tw-ring-color: rgb(205, 206, 209) !important; /* gray-400 */
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, hsla(0, 3%, 77%, 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgba(192, 185, 185, 0.1)) !important;
+}
+.bg-card{
+    border: 1px solid rgb(206, 200, 200) !important;
 }
